tests/NormalTests/paczka1/fuzzy1/58632479.err
Error in line 5: joSyXNjAv S534 49,4
Error in line 13: S859 S534 82,3
Error in line 17: 7WnG9vArP S534 25,5
Error in line 30: J6jK S702 94,9
Error in line 37: qwb S859 24,58
Error in line 34: 7WnG9vArP S859 53,4
